--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         class="h-screen bg-black text-white flex justify-center items-center flex-col space-y-8"
       >
         <img
-          src="./assets//images/hero-image.jpg"
+          src="./assets/images/hero-image.jpg"
           alt="Mickael Knop"
-          class="rounded-full w-2/3 mb-6"
+          class="rounded-full w-2/3 md:w-1/3 lg:w-1/4 mb-6"
         />
-        <p>Mickael Knop</p>
-        <h1 class="text-3xl font-extrabold text-orange-500">
+        <p class="lg:text-2xl">Mickael Knop</p>
+        <h1 class="text-3xl lg:text-5xl font-extrabold text-orange-500">
           Full-stack Developer
         </h1>
         <button class="bg-white text-black px-4 py-2">See more</button>
@@ -40,8 +40,8 @@
         id="about"
         class="h-screen bg-orange-500 text-white flex justify-center items-center flex-col space-y-8"
       >
-        <h1 class="text-3xl font-extrabold mb-8">About me</h1>
-        <div class="mx-10 text-black space-y-8 text-justify">
+        <h1 class="text-3xl font-extrabold mb-8 lg:text-5xl">About me</h1>
+        <div class="mx-10 text-black space-y-8 text-justify lg:text-2xl lg:mx-72">
           <p>
             I'm a software developer with experience in building and sustaining
             web and mobile applications, as well as managing its infrastructure.
@@ -63,18 +63,18 @@
       </section>
       <section
         id="experience"
-        class="h-screen bg-black text-white flex justify-center items-center flex-col space-y-8"
+        class="h-screen bg-black text-white flex justify-center items-center flex-col space-y-8 lg:space-y-12"
       >
-        <h1 class="text-3xl font-extrabold mb-8">Profissional Experience</h1>
-        <div class="mx-10 space-y-12">
-          <div class="space-y-4">
+        <h1 class="text-3xl font-extrabold mb-8 lg:text-5xl">Profissional Experience</h1>
+        <div class="mx-10 space-y-12 lg:space-y-14 lg:mx-0 lg:w-1/2">
+          <div class="space-y-4 lg:space-y-8">
             <div class="flex space-x-4 justify-between items-center">
-              <span class="text-xl">2020</span>
+              <span class="text-xl lg:text-2xl">2020</span>
               <span class="flex-1 h-1 bg-orange-500"></span>
-              <h2 class="text-2xl font-extrabold">PlanMob</h2>
+              <h2 class="text-2xl lg:text-3xl font-extrabold">PlanMob</h2>
             </div>
             <div>
-              <p class="text-justify">
+              <p class="text-justify lg:text-2xl">
                 Sustained a products delivering Node/Express API. Realized
                 thirdy-party services integration with AWS and created a BFF API
                 with PHP based on the main one, using Clean Arch and Test-Driven
@@ -82,14 +82,14 @@
               </p>
             </div>
           </div>
-          <div class="space-y-4">
+          <div class="space-y-4 lg:space-y-8">
             <div class="flex space-x-4 justify-between items-center">
-              <span class="text-xl">2019</span>
+              <span class="text-xl lg:text-2xl">2019</span>
               <span class="flex-1 h-1 bg-orange-500"></span>
-              <h2 class="text-2xl font-extrabold">TrioMidia</h2>
+              <h2 class="text-2xl lg:text-3xl font-extrabold">TrioMidia</h2>
             </div>
             <div>
-              <p class="text-justify">
+              <p class="text-justify lg:text-2xl">
                 Developed institutional, e-commerce and CMS applications. Mobile
                 MVPs with Expo. Was also responsible for the infrastructure of
                 the Apps.
@@ -102,26 +102,42 @@
         id="projects"
         class="bg-orange-500 text-white flex justify-center items-center flex-col space-y-8 py-16"
       >
-        <h1 class="text-3xl font-extrabold mb-8">Side Projects</h1>
-        <div class="mx-10 space-y-8">
+        <h1 class="text-3xl font-extrabold mb-8 lg:text-5xl">Side Projects</h1>
+        <div class="mx-10 lg:mx-72 space-y-8 xl:space-y-0 xl:grid xl:grid-cols-2 xl:gap-12">
           <div class="bg-black rounded-lg">
             <a href="https://screw.ind.br" target="_blank">
-              <img src="./assets/images/screw.jpg" alt="Screw" class="rounded-xl p-1"/>
+              <img
+                src="./assets/images/screw.jpg"
+                alt="Screw"
+                class="rounded-xl p-1 xl:transition-opacity xl:duration-300 xl:ease-in-out xl:hover:opacity-50"
+              />
             </a>
           </div>
           <div class="bg-black rounded-lg">
             <a href="https://2fmineradora.com.br" target="_blank">
-              <img src="./assets/images/2f.jpg" alt="2F" class="rounded-xl p-1"/>
+              <img
+                src="./assets/images/2f.jpg"
+                alt="2F"
+                class="rounded-xl p-1 xl:transition-opacity xl:duration-300 xl:ease-in-out xl:hover:opacity-50"
+              />
             </a>
           </div>
           <div class="bg-black rounded-lg">
             <a href="http://caumaq.com.br" target="_blank">
-              <img src="./assets/images/caumaq.jpg" alt="CAUMAQ" class="rounded-xl p-1"/>
+              <img
+                src="./assets/images/caumaq.jpg"
+                alt="CAUMAQ"
+                class="rounded-xl p-1 xl:transition-opacity xl:duration-300 xl:ease-in-out xl:hover:opacity-50"
+              />
             </a>
           </div>
           <div class="bg-black rounded-lg">
             <a href="https://knopmickael.github.io/webstore" target="_blank">
-              <img src="./assets/images/webstore.jpg" alt="Webstore" class="rounded-xl p-1"/>
+              <img
+                src="./assets/images/webstore.jpg"
+                alt="Webstore"
+                class="rounded-xl p-1 xl:transition-opacity xl:duration-300 xl:ease-in-out xl:hover:opacity-50"
+              />
             </a>
           </div>
         </div>
