btn scroll to about section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         font-family: "JetBrains Mono", sans-serif;
         font-family: "JetBrains Mono NL", sans-serif;
       }
+      html {
+        scroll-behavior: smooth;
+      }
       ::-webkit-scrollbar {
         width: 10px;
       }
@@ -45,7 +48,7 @@
         <h1 class="text-3xl lg:text-5xl font-extrabold text-orange-500">
           Full-stack Developer
         </h1>
-        <button class="bg-white text-black px-4 py-2">See more</button>
+        <a href="#about" class="bg-white text-black px-4 py-2">See more</a>
       </section>
       <section
         id="about"
