--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Mickael Knop - Developer</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="description" content="Software developer portfolium" />
-    <link rel="icon" href="./assets/images/favicon.png" />
+    <link rel="icon" href="./assets/favicon.png" />
     <link
       href="https://fonts.cdnfonts.com/css/jetbrains-mono-2"
       rel="stylesheet"
@@ -40,7 +40,7 @@
         class="h-screen bg-black text-white flex justify-center items-center flex-col space-y-8"
       >
         <img
-          src="./assets/images/hero-image.jpg"
+          src="./assets/hero-image.jpg"
           alt="Mickael Knop"
           class="rounded-full w-2/3 md:w-1/3 lg:w-1/4 mb-6"
         />
@@ -52,7 +52,7 @@
       </section>
       <section
         id="about"
-        class="h-screen bg-orange-500 text-white flex justify-center items-center flex-col space-y-8"
+        class="h-screen bg-orange-500 text-white flex justify-center items-center flex-col space-y-8 relative"
       >
         <h1 class="text-3xl font-extrabold mb-8 lg:text-5xl">About me</h1>
         <div
@@ -76,6 +76,7 @@
             Kubernetes, CI/CD pipelines and cloud programming.
           </p>
         </div>
+        <a href="./assets/mickael-knop.pdf" target="_blank" downlaod class="absolute right-10 top-2 text-black hover:underline">Download my CV</a>
       </section>
       <section
         id="experience"
@@ -127,7 +128,7 @@
           <div class="bg-black rounded-lg">
             <a href="https://screw.ind.br" target="_blank">
               <img
-                src="./assets/images/screw.jpg"
+                src="./assets/screw.jpg"
                 alt="Screw"
                 class="rounded-xl p-1 xl:transition-opacity xl:duration-300 xl:ease-in-out xl:hover:opacity-50"
               />
@@ -136,7 +137,7 @@
           <div class="bg-black rounded-lg">
             <a href="https://2fmineradora.com.br" target="_blank">
               <img
-                src="./assets/images/2f.jpg"
+                src="./assets/2f.jpg"
                 alt="2F"
                 class="rounded-xl p-1 xl:transition-opacity xl:duration-300 xl:ease-in-out xl:hover:opacity-50"
               />
@@ -145,7 +146,7 @@
           <div class="bg-black rounded-lg">
             <a href="http://caumaq.com.br" target="_blank">
               <img
-                src="./assets/images/caumaq.jpg"
+                src="./assets/caumaq.jpg"
                 alt="CAUMAQ"
                 class="rounded-xl p-1 xl:transition-opacity xl:duration-300 xl:ease-in-out xl:hover:opacity-50"
               />
@@ -154,7 +155,7 @@
           <div class="bg-black rounded-lg">
             <a href="https://knopmickael.github.io/webstore" target="_blank">
               <img
-                src="./assets/images/webstore.jpg"
+                src="./assets/webstore.jpg"
                 alt="Webstore"
                 class="rounded-xl p-1 xl:transition-opacity xl:duration-300 xl:ease-in-out xl:hover:opacity-50"
               />
